# dev-setup

./: Cpp.md  README.md
samples/cpp/: .clang-format
samples/cpp/calculator/: .gitignore  CMakeLists.txt  Session.vim  build.ps1  build.sh  run_tests.ps1  run_tests.sh
samples/cpp/calculator/src/: Add.cpp  Add.h  BinaryOperation.cpp  BinaryOperation.h  IOperation.h  Square.cpp  Square.h  UnaryOperation.cpp  UnaryOperation.h
samples/cpp/calculator/test/: main.cpp
